# sparv-sbx-metadata

./: .editorconfig  .gitignore  README.md  manifest.yaml  pyproject.toml  setup.py
data/: sbx-metashare-template.xml
docs/: analysis-metadata.md
sbx_metadata/: __init__.py  analysis_metadata_export.py  json_export.py  metadata_utils.py  metashare.py  yaml_export.py
