[project]
name = "sparv-sbx-metadata"
version = "2.3.1"
description = "Sparv plugin for SBX specific export of metadata"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Språkbanken Text", email = "sb-info@svenska.gu.se" },
]
dependencies = [
    "langcodes[data]>=2.1.0",
    "pyyaml>=6.0",
    "sparv>=5.3.0,<6",
]
entry-points."sparv.plugin" = { sbx_metadata = "sbx_metadata" }

[project.urls]
Homepage = "https://github.com/spraakbanken/sparv-sbx-metadata/"

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sbx_metadata"
module-root = ""
